--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ sphinx-named-colors
 
 # Now list the packages you want to download directly from GitHub
 git+https://github.com/TeachBooks/Sphinx-Thebe
+
+--extra-index-url https://test.pypi.org/simple/
+teachbooks_software_project_extension_name==0.0.9
