--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,26 +4,9 @@ root: intro.md
 parts:
   - caption: Contents
     chapters:
-    - file: some_content/overview.md
-      sections:
-      - file: some_content/text_and_code.ipynb
-    - file: exercises.md
-      sections:
-      - file: exercises/001.md
-      - file: exercises/002.md
-      - file: exercises/003.md
-      - file: exercises/004.md
-      - file: exercises/005.md
-      - file: exercises/006.md
-      - file: exercises/summary
-    - file: syntax_exercises.md
-      sections:
-      - file: syntax_exercises/007.md
-      - file: syntax_exercises/008.md
-      - file: syntax_exercises/009.md
-      - file: syntax_exercises/010.md
-      - file: syntax_exercises/011.md
-      - file: syntax_exercises/012.md
-    - file: references.md
-    - file: changelog.md
-    - file: credits.md
+    - file: course_description.md
+    - file: learning_objectives.md
+    - file: structure_and_dates.md
+    - file: assessment.md
+    - file: resources_and_tools.md
+    - file: staff_and_support.md
