--- a/book/_config.yml
+++ b/book/_config.yml
@@ -10,7 +10,7 @@ only_build_toc_files: true                           # Replace this with false i
 
 html:
   favicon : "figures/TB_favicon.ico"                 # Replace this with your own favicon
-  baseurl :  "https://<user/org>.io/<repo>"          # Replace this with your own URL
+  baseurl :  "https://Lopalov.io/teachbook_integration"          # Replace this with your own URL
 
 sphinx:                                              # Options passed on to the underlying sphinx-parser
   config:
@@ -21,7 +21,7 @@ sphinx:                                              # Options passed on to the 
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"] #exclude files which should not be accessible for live code: https://teachbooks.io/manual/features/live_code.html
     html_theme_options:
       logo:
-        text: Template                               # Replace this with your own book title
+        text: MDACN                               # Replace this with your own book title
         image_light: TeachBooks_logo.svg             # Put your logo for the light mode here (can be the same as image_dark)
         image_dark: TeachBooks_logo_inverted.svg     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/Lopalov/teachbook_integration" # Add your own repo URL here
